@@ -1,19 +1,22 @@
 // SPDX-License-Identifier: Apache-2.0
 package com.hedera.node.app.blocks;
 
+import static com.hedera.hapi.node.base.HederaFunctionality.CONSENSUS_SUBMIT_MESSAGE;
 import static com.hedera.hapi.node.base.HederaFunctionality.CONTRACT_CALL;
 import static com.hedera.hapi.node.base.HederaFunctionality.CRYPTO_CREATE;
 import static com.hedera.hapi.node.base.HederaFunctionality.UTIL_PRNG;
 import static com.hedera.hapi.util.HapiUtils.asTimestamp;
 import static com.hedera.node.app.spi.workflows.HandleContext.TransactionCategory.USER;
 import static com.hedera.node.app.spi.workflows.record.StreamBuilder.ReversingBehavior.REVERSIBLE;
-import static com.hedera.node.app.spi.workflows.record.StreamBuilder.TransactionCustomizer.NOOP_TRANSACTION_CUSTOMIZER;
+import static com.hedera.node.app.spi.workflows.record.StreamBuilder.SignedTxCustomizer.NOOP_SIGNED_TX_CUSTOMIZER;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import com.hedera.hapi.block.stream.BlockItem;
 import com.hedera.hapi.block.stream.trace.ContractSlotUsage;
 import com.hedera.hapi.block.stream.trace.SlotRead;
+import com.hedera.hapi.block.stream.trace.WrittenSlotKeys;
 import com.hedera.hapi.node.base.AccountAmount;
 import com.hedera.hapi.node.base.AccountID;
 import com.hedera.hapi.node.base.ContractID;
@@ -22,16 +25,15 @@ import com.hedera.hapi.node.base.ResponseCodeEnum;
 import com.hedera.hapi.node.base.ScheduleID;
 import com.hedera.hapi.node.base.TokenAssociation;
 import com.hedera.hapi.node.base.TokenTransferList;
-import com.hedera.hapi.node.base.Transaction;
 import com.hedera.hapi.node.base.TransactionID;
 import com.hedera.hapi.node.base.TransferList;
 import com.hedera.hapi.node.contract.EvmTransactionResult;
 import com.hedera.hapi.node.token.CryptoTransferTransactionBody;
 import com.hedera.hapi.node.transaction.AssessedCustomFee;
 import com.hedera.hapi.node.transaction.ExchangeRateSet;
+import com.hedera.hapi.node.transaction.SignedTransaction;
 import com.hedera.hapi.node.transaction.TransactionBody;
 import com.hedera.hapi.node.transaction.TransactionRecord;
-import com.hedera.hapi.streams.ContractStateChanges;
 import com.hedera.node.app.blocks.impl.BlockStreamBuilder;
 import com.hedera.pbj.runtime.io.buffer.Bytes;
 import java.time.Instant;
@@ -50,13 +52,15 @@ public class BlockStreamBuilderTest {
     public static final long TRANSACTION_FEE = 6846513L;
     public static final int ENTROPY_NUMBER = 87372879;
     public static final String MEMO = "Yo Memo";
-    private Transaction transaction = Transaction.newBuilder()
-            .body(TransactionBody.newBuilder()
+    private final SignedTransaction signedTx = SignedTransaction.newBuilder()
+            .bodyBytes(TransactionBody.PROTOBUF.toBytes(TransactionBody.newBuilder()
                     .cryptoTransfer(CryptoTransferTransactionBody.newBuilder().build())
-                    .build())
+                    .memo("ABCDEFG")
+                    .transactionFee(123)
+                    .build()))
             .build();
+    private final Bytes signedTxBytes = SignedTransaction.PROTOBUF.toBytes(signedTx);
     private @Mock TransactionID transactionID;
-    private final Bytes transactionBytes = Bytes.wrap("Hello Tester");
     private @Mock TransferList transferList;
     private @Mock TokenTransferList tokenTransfer;
     private @Mock ScheduleID scheduleRef;
@@ -66,7 +70,6 @@ public class BlockStreamBuilderTest {
     private @Mock AccountAmount accountAmount;
     private @Mock ResponseCodeEnum status;
     private @Mock ExchangeRateSet exchangeRate;
-    private @Mock ContractStateChanges contractStateChanges;
     private @Mock AccountID accountID;
 
     @Test
@@ -75,7 +78,7 @@ public class BlockStreamBuilderTest {
                 .assessedCustomFees(List.of(assessedCustomFee))
                 .functionality(HederaFunctionality.CRYPTO_TRANSFER);
 
-        List<BlockItem> blockItems = itemsBuilder.build(false).blockItems();
+        List<BlockItem> blockItems = itemsBuilder.build(false, null).blockItems();
         validateTransactionBlockItems(blockItems);
         validateTransactionResult(blockItems);
 
@@ -92,7 +95,7 @@ public class BlockStreamBuilderTest {
         if (entropyOneOfType == TransactionRecord.EntropyOneOfType.PRNG_BYTES) {
             final var itemsBuilder =
                     createBaseBuilder().functionality(UTIL_PRNG).entropyBytes(prngBytes);
-            List<BlockItem> blockItems = itemsBuilder.build(false).blockItems();
+            List<BlockItem> blockItems = itemsBuilder.build(false, null).blockItems();
             validateTransactionBlockItems(blockItems);
             validateTransactionResult(blockItems);
 
@@ -104,7 +107,7 @@ public class BlockStreamBuilderTest {
         } else {
             final var itemsBuilder =
                     createBaseBuilder().functionality(UTIL_PRNG).entropyNumber(ENTROPY_NUMBER);
-            List<BlockItem> blockItems = itemsBuilder.build(false).blockItems();
+            List<BlockItem> blockItems = itemsBuilder.build(false, null).blockItems();
             validateTransactionBlockItems(blockItems);
             validateTransactionResult(blockItems);
 
@@ -118,15 +121,15 @@ public class BlockStreamBuilderTest {
 
     @Test
     void testBlockItemsWithTraceAndOutput() {
-        final var usages =
-                List.of(new ContractSlotUsage(ContractID.DEFAULT, List.of(Bytes.EMPTY), List.of(SlotRead.DEFAULT)));
+        final var usages = List.of(new ContractSlotUsage(
+                ContractID.DEFAULT, new WrittenSlotKeys(List.of(Bytes.EMPTY)), List.of(SlotRead.DEFAULT)));
         final var evmTxResult = EvmTransactionResult.DEFAULT;
         final var itemsBuilder = createBaseBuilder()
                 .functionality(CONTRACT_CALL)
                 .evmCallTransactionResult(evmTxResult)
                 .addContractSlotUsages(usages);
 
-        List<BlockItem> blockItems = itemsBuilder.build(false).blockItems();
+        List<BlockItem> blockItems = itemsBuilder.build(false, null).blockItems();
         validateTransactionBlockItems(blockItems);
         validateTransactionResult(blockItems);
 
@@ -144,11 +147,28 @@ public class BlockStreamBuilderTest {
     }
 
     @Test
+    void testBlockItemsWithAdditionalSubmitMsgTraceData() {
+        final var itemsBuilder = createEmptyBuilder().functionality(CONSENSUS_SUBMIT_MESSAGE);
+        // set additional trace data
+        itemsBuilder.topicSequenceNumber(66);
+        final var blockItems = itemsBuilder.build(false, List.of()).blockItems();
+
+        final var traceItem = blockItems.get(2);
+        assertThat(traceItem.hasTraceData()).isTrue();
+        final var trace = traceItem.traceDataOrThrow();
+
+        assertThat(trace.hasSubmitMessageTraceData()).isTrue();
+        final var submitMessageTraceData = trace.submitMessageTraceData();
+        assertThat(submitMessageTraceData).isNotNull();
+        assertThat(submitMessageTraceData.sequenceNumber()).isEqualTo(66);
+    }
+
+    @Test
     void testBlockItemsWithCreateAccountOutput() {
         final var itemsBuilder =
                 createBaseBuilder().functionality(CRYPTO_CREATE).accountID(accountID);
 
-        List<BlockItem> blockItems = itemsBuilder.build(false).blockItems();
+        List<BlockItem> blockItems = itemsBuilder.build(false, null).blockItems();
         validateTransactionBlockItems(blockItems);
         validateTransactionResult(blockItems);
 
@@ -173,28 +193,26 @@ public class BlockStreamBuilderTest {
         assertEquals(List.of(tokenAssociation), result.automaticTokenAssociations());
         assertEquals(List.of(accountAmount), result.paidStakingRewards());
         assertEquals(10L, result.congestionPricingMultiplier());
+        assertEquals(4L, result.highVolumePricingMultiplier());
     }
 
     private void validateTransactionBlockItems(final List<BlockItem> blockItems) {
-        final var txnBlockItem = blockItems.get(0);
-        assertTrue(txnBlockItem.hasEventTransaction());
-        assertEquals(
-                Transaction.PROTOBUF.toBytes(transaction),
-                txnBlockItem.eventTransaction().applicationTransactionOrThrow());
+        final var txnBlockItem = blockItems.getFirst();
+        assertTrue(txnBlockItem.hasSignedTransaction());
+        assertEquals(SignedTransaction.PROTOBUF.toBytes(signedTx), txnBlockItem.signedTransactionOrThrow());
     }
 
     private BlockStreamBuilder createBaseBuilder() {
         final List<TokenTransferList> tokenTransferLists = List.of(tokenTransfer);
         final List<AccountAmount> paidStakingRewards = List.of(accountAmount);
-        return new BlockStreamBuilder(REVERSIBLE, NOOP_TRANSACTION_CUSTOMIZER, USER)
+        return new BlockStreamBuilder(REVERSIBLE, NOOP_SIGNED_TX_CUSTOMIZER, USER)
                 .status(status)
                 .consensusTimestamp(CONSENSUS_TIME)
                 .parentConsensus(PARENT_CONSENSUS_TIME)
                 .exchangeRate(exchangeRate)
                 .scheduleRef(scheduleRef)
                 .transactionFee(TRANSACTION_FEE)
-                .transaction(transaction)
-                .transactionBytes(transactionBytes)
+                .signedTx(signedTx)
                 .transactionID(transactionID)
                 .memo(MEMO)
                 .transactionFee(TRANSACTION_FEE)
@@ -202,6 +220,13 @@ public class BlockStreamBuilderTest {
                 .tokenTransferLists(tokenTransferLists)
                 .addAutomaticTokenAssociation(tokenAssociation)
                 .paidStakingRewards(paidStakingRewards)
-                .congestionMultiplier(10L);
+                .congestionMultiplier(10L)
+                .highVolumePricingMultiplier(4L);
+    }
+
+    private BlockStreamBuilder createEmptyBuilder() {
+        return new BlockStreamBuilder(REVERSIBLE, NOOP_SIGNED_TX_CUSTOMIZER, USER)
+                .signedTx(signedTx)
+                .serializedSignedTx(signedTxBytes);
     }
 }
